Docker - Kubernetes/demo-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: phpmyadmin
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: phpmyadmin
