Docker - Kubernetes/demo-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codercestfun-ingress
spec:
  rules:
    - host: nginx-codercestfun-kube03.isitech.tancou.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
